изменен метод хранения истории