@@ -2,25 +2,22 @@ package com.yandex.taskTracker.service.HistoryManager;
 
 import com.yandex.taskTracker.model.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private final ArrayList<Task> history = new ArrayList<>();
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public LinkedList<Task> getHistory() {
         return history;
     }
 
     @Override
     public void add(Task task) {
-
-        if (history.size() < 10) {
-            history.add(task);
-        } else {
-            history.remove(0);
-            history.add(task);
+        history.addLast(task);
+        if (history.size() == 11) {
+            history.removeFirst();
         }
     }
 }
